# trie-1

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  visualizer.c
include/: trie.h
src/: CMakeLists.txt  trie.c
tests/: CMakeLists.txt  highload.c  normal.c  remove.c  tail_diff.c
